<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Patient Alliance</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login">Login</string>
    <string name="forgotpassword"><u>Forgot Password</u></string>
    <string name="newuser">New User? Sign Up </string>
    <string name="title_activity_sign_up_">SignUP_Activity</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- MainScreen-->
    <string name="title_dashboard">Dashboard</string>
    <string name="title_campaign_management">Campaign\nManagement</string>
    <string name="title_lead_search">Lead Search</string>
    <string name="title_customer_service">Customer\nService</string>

    <!-- Campaign -->
    <string name="new_campaign">New Campaign</string>
    <string name="search_campaign">Search Campaign</string>


    <!-- Webservices strings -->

    <string name="allowdigits">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz</string>

    <string name="reset">Reset</string>
    <string name="search">Search</string>
    <string name="gender">Gender</string>
    <string name="fullname">Full Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="dob">DOB</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="zip_code">Zip Code</string>
    <string name="diagnosis">Diagnosis/ICD 10 Codes</string>
    <string name="city">City</string>
    <string name="branch">Branch</string>
    <string name="package_campaign">Package/Campaign</string>
    <string name="speciality">Speciality</string>
    <string name="lead_reply">Lead Reply</string>
    <string name="mobile">Mobile</string>
    <string name="insurance">Insurance</string>
    <string name="card_details">Card Details</string>
    <string name="basic_info">Basic Info</string>
    <string name="campaigns">Campaigns</string>
    <string name="service">Service</string>
    <!--patient demographic-->

    <string name="record_id">M.Record ID</string>
    <string name="title">Title</string>
    <string name="age">Age</string>
    <string name="profession">Profession</string>
    <string name="company">Company</string>
    <string name="doctor">Doctor</string>
    <string name="state">State</string>
    <string name="allergies">Allergies</string>
    <string name="family_history">Family History</string>
    <string name="encounter">Encounter</string>
    <string name="personal_history">Personal History</string>
    <string name="notes">Notes</string>
    <string name="payment_type">Patient Type</string>
    <string name="patient">Patient</string>
    <!--Insurance screen-->

    <string name="insurance_type">Insurance Type</string>
    <string name="insurance_category">Insurance Category</string>
    <string name="insurance_number">Insurance Number</string>
    <string name="insurance_plan_name">Insurance Plan Name / Program Name</string>
    <string name="add">Add</string>
    <string name="type">Type</string>
    <string name="number">Number</string>
    <string name="groupcode">Group Code</string>
    <string name="statu">Status</string>
    <string name="action">Action</string>
    <string name="card_type">Card Type</string>
    <string name="card_name">Name on the card</string>
    <string name="card_number">Card Number</string>
    <string name="card_cvv">CVV</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="save">Save</string>

    <!--pd services-->
    <string name="campaign_code">Campaign Code</string>
    <string name="service_type">Service Type</string>
    <string name="service_date">Service Date</string>
</resources>